# eve-guide

./: .gitignore  404.html  README.md  branch_structure.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
backend/docs/: index.html
backend/docs/api/routers-auth/: index.html
backend/docs/api/routers-collection/: index.html
backend/docs/api/routers-conversation/: index.html
backend/docs/docker_setup/: index.html
backend/docs/getting_started/: index.html
backend/docs/local_setup/: index.html
backend/docs/routers-auth/: index.html
backend/docs/routers-collection/: index.html
backend/docs/routers-conversation/: index.html
backend/docs/routers-document/: index.html
backend/docs/routers-forgot_password/: index.html
backend/docs/routers-health_check/: index.html
backend/docs/routers-message/: index.html
backend/docs/routers-user/: index.html
backend/docs/types/: index.html
data-processing/docs/: index.html
data-scraping/docs/: index.html
data-scraping/docs/examples/: index.html
data-scraping/docs/getting_started/: index.html
data-scraping/docs/model/: index.html
data-scraping/docs/scrapers/: index.html
docs/: eo_task.md  index.md
eo_task/: index.html
evalkit/docs/: index.html
evalkit/docs/eo_tasks/: index.html
evalkit/docs/evalkit/: index.html
evalkit/docs/examples/: index.html
evalkit/docs/getting_started/: index.html
frontend/docs/: index.html
frontend/docs/getting_started/: index.html
search/: search_index.json
stylesheets/: extra.css
(+31 files in other folders)
