[project]
name = "eve-documentation"
version = "0.1.0"
description = "eve documentation served via mkdocs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material>=9.7.0",
    "mkdocs-multirepo>=0.5.2",
    "mkdocs-multirepo-plugin>=0.8.3",
    "mkdocstrings[python]>=1.0.0",
]
